--- a/src/app/pages/general/app/today/today.component.html
+++ b/src/app/pages/general/app/today/today.component.html
@@ -1,1 +1,76 @@
-<app-sidebar currentNav="today" />
+<app-sidebar
+  currentNav="today"
+  (statusToggleSdebarFromChild)="handleStatusToggleSidebarFromChild($event)"
+/>
+
+<div class="flex flex-col w-full min-h-screen">
+  <!-- START HEADER -->
+  <div class="flex ml-auto p-4">
+    <details class="dropdown dropdown-bottom dropdown-end">
+      <summary
+        class="btn btn-sm bg-transparent text-neutral/80 outline-none border-none shadow-none hover:bg-neutral/10 transition-all"
+      >
+        <ng-icon name="heroAdjustmentsHorizontal" size="20" />
+        View
+      </summary>
+      <div
+        class="menu dropdown-content bg-base-100 rounded-box z-[1] w-72 p-4 shadow"
+      >
+        <div class="flex items-center justify-between">
+          <p class="font-bold text-base">View</p>
+          <div
+            tabindex="0"
+            role="button"
+            class="btn btn-circle btn-ghost btn-xs text-info"
+          >
+            <ng-icon name="faCircleQuestion" color="#3d4451" size="12" />
+          </div>
+        </div>
+
+        <div class="form-control hover:bg-neutral/10 rounded-md transition-all">
+          <label class="label cursor-pointer">
+            <div class="flex items-center gap-2">
+              <ng-icon name="faCircleCheck" size="20" class="mt-1" />
+              <span class="label-text">Completed tasks</span>
+            </div>
+            <input
+              type="checkbox"
+              class="toggle toggle-secondary"
+              (change)="handleChangeShowCompletedTask()"
+            />
+          </label>
+        </div>
+      </div>
+    </details>
+    <details class="dropdown dropdown-bottom dropdown-end">
+      <summary
+        class="btn btn-sm bg-transparent text-neutral/80 outline-none border-none shadow-none hover:bg-neutral/10 transition-all"
+      >
+        <ng-icon name="heroEllipsisHorizontal" size="20" />
+      </summary>
+      <div
+        class="menu dropdown-content bg-base-100 rounded-box z-[1] w-52 p-2 shadow"
+      >
+        <li><a>Item 1</a></li>
+        <li><a>Item 2</a></li>
+      </div>
+    </details>
+  </div>
+  <!-- END HEADER -->
+
+  <!-- START BODY -->
+  <div
+    class="flex-1 sm:ml-64 sm:px-56 px-6 py-1 transition-all duration-700"
+    [ngClass]="statusToggleSidebar ? ' ' : 'sm:ml-0 sm:px-[24rem]'"
+  >
+    <div class="flex flex-col p-4 rounded-lg dark:border-gray-700">
+      <h1 class="font-bold text-2xl mb-4">Today</h1>
+      @switch (isShowCompletedTask) { @case (false) {@for (task of listTaksTest;
+      track task.id){ @if (!task.isCompleted) {<app-task [task]="task" />} }}
+      @case (true) {@for (task of taskInCompleted; track task.id){
+      <app-task [task]="task" />} @for (task of taskCompleted; track task.id)
+      {<app-task [task]="task" />}} }
+    </div>
+  </div>
+  <!-- END BODY -->
+</div>
